--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,8 @@ section {
 .home .image img {
   height: 50rem;
   width: 50rem;
-  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  border-radius:20%;
+  /* border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%; */
 }
 
 .home .content {
